# lhama_swapi

./: .pylintrc  pyproject.toml
src/infra/: swapi_api_consumer.py  swapi_api_consumer_test.py
